force-app/main/default/objects/Customer_Thermometer__c/Customer_Thermometer__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Customer Thermometer</label>
</CustomObject>