force-app/main/default/objects/Customer_Thermometer__c/fields/blast_id__c.field-meta.xml
<CustomField>
    <fullName>blast_id__c</fullName>
    <label>blast id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>