force-app/main/default/objects/Customer_Thermometer__c/fields/Gold_Star__c.field-meta.xml
<CustomField>
    <fullName>Gold_Star__c</fullName>
    <label>Gold Star</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>