force-app/main/default/objects/Customer_Thermometer__c/fields/Latest_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Date__c</fullName>
    <label>Latest Date</label>
    <length>20</length>
    <type>Text</type>
</CustomField>