force-app/main/default/objects/Customer_Thermometer__c/fields/Red_Light__c.field-meta.xml
<CustomField>
    <fullName>Red_Light__c</fullName>
    <label>Red Light</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>