force-app/main/default/objects/Customer_Thermometer__c/fields/Total_Response__c.field-meta.xml
<CustomField>
    <fullName>Total_Response__c</fullName>
    <label>Total Response</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>